Fix the dark mode color for placeholder dummy lines

--- a/src/index.css
+++ b/src/index.css
@@ -85,10 +85,7 @@
       width: 100%;
       height: 20px;
       position: absolute;
-      background: #fff;
-      @media (prefers-color-scheme: dark) {
-        background: #333;
-      }
+      @apply bg-white dark:bg-gray-800;
       z-index: 2;
 
       &:after,
